@@ -1,7 +1,5 @@
 package com.agutsul.chess.piece.pawn;
 
-import static java.util.stream.Collectors.toList;
-
 import java.util.Collection;
 import java.util.List;
 
@@ -17,15 +15,15 @@ import com.agutsul.chess.position.Position;
 
 final class PawnPromoteAlgo<COLOR extends Color,
                             PAWN extends PawnPiece<COLOR>>
-        extends AbstractAlgo<PAWN, Position>
-        implements PromotePieceAlgo<COLOR, PAWN, Position> {
+        extends AbstractAlgo<PAWN,Position>
+        implements PromotePieceAlgo<COLOR,PAWN,Position> {
 
-    private final Collection<Algo<PAWN, Collection<Position>>> algos;
+    private final Collection<Algo<PAWN,Collection<Position>>> algos;
     private final int promotionLine;
 
     PawnPromoteAlgo(Board board, int promotionLine,
-                    MovePieceAlgo<COLOR, PAWN, Position> moveAlgo,
-                    CapturePieceAlgo<COLOR, PAWN, Position> captureAlgo) {
+                    MovePieceAlgo<COLOR,PAWN,Position> moveAlgo,
+                    CapturePieceAlgo<COLOR,PAWN,Position> captureAlgo) {
 
         super(board);
         this.promotionLine = promotionLine;
@@ -38,6 +36,6 @@ final class PawnPromoteAlgo<COLOR extends Color,
                 .map(algo -> algo.calculate(pawn))
                 .flatMap(Collection::stream)
                 .filter(position -> position.y() == promotionLine)
-                .collect(toList());
+                .toList();
     }
 }
